SFDEV/force-app/main/default/objects/EmployeeNew__c/fields/Department1__c.field-meta.xml
<CustomField>
    <fullName>Department1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>DepartmentNew__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>