SFDEV/force-app/main/default/objects/EmployeeNew__c/fields/Department3__c.field-meta.xml
<CustomField>
    <fullName>Department3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>DepartmentNew__c</referenceTo>
    <relationshipLabel>Employees (Department)</relationshipLabel>
    <relationshipName>Employees2</relationshipName>
    <type>Lookup</type>
</CustomField>