SFDEV/force-app/main/default/objects/EmployeeNew__c/validationRules/Dept1ShouldBeUnique.validationRule-meta.xml
<ValidationRule>
    <fullName>Dept1ShouldBeUnique</fullName>
    <active>true</active>
    <errorConditionFormula>(Department1__c = Department2__c) || (Department1__c = Department3__c)</errorConditionFormula>
    <errorMessage>Dept1 should be unique</errorMessage>
</ValidationRule>