SFDEV/force-app/main/default/objects/EmployeeNew__c/validationRules/Dept2ShouldBeUnique.validationRule-meta.xml
<ValidationRule>
    <fullName>Dept2ShouldBeUnique</fullName>
    <active>true</active>
    <description>Dept2 should not be same as Dept1 or Dept3</description>
    <errorConditionFormula>(Department2__c  = Department1__c) || (Department2__c  = Department3__c)</errorConditionFormula>
    <errorMessage>Dept2 should be unique</errorMessage>
</ValidationRule>