SFDEV/force-app/main/default/objects/EmployeeNew__c/validationRules/Dept3ShouldBeUnique.validationRule-meta.xml
<ValidationRule>
    <fullName>Dept3ShouldBeUnique</fullName>
    <active>true</active>
    <description>Dept3 should not be same as Dept1 and Dept2</description>
    <errorConditionFormula>(Department3__c  =  Department1__c ) ||  (Department3__c  =  Department2__c )</errorConditionFormula>
    <errorMessage>Dept3 should be unique</errorMessage>
</ValidationRule>